out/CL-DETR_2524737_0.out
Testing cl_detr
Running on Hostname: gervasoni
Fri Feb  7 14:01:37 2025       
+---------------------------------------------------------------------------------------+
| NVIDIA-SMI 535.183.01             Driver Version: 535.183.01   CUDA Version: 12.2     |
|-----------------------------------------+----------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |
|                                         |                      |               MIG M. |
|=========================================+======================+======================|
|   0  Quadro RTX 5000                On  | 00000000:DA:00.0 Off |                  Off |
| 33%   28C    P8              11W / 230W |      1MiB / 16384MiB |      0%      Default |
|                                         |                      |                  N/A |
+-----------------------------------------+----------------------+----------------------+
                                                                                         
+---------------------------------------------------------------------------------------+
| Processes:                                                                            |
|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |
|        ID   ID                                                             Usage      |
|=======================================================================================|
|  No running processes found                                                           |
+---------------------------------------------------------------------------------------+
Active Python Environment:
tesi                  *  /homes/pcarboni/.conda/envs/tesi
Python 3.12.7
Python Path:
/homes/pcarboni/.conda/envs/tesi/bin/python
sys.path = [
    '/work/tesi_pcarboni/CL-DETR',
    '/homes/pcarboni/.conda/envs/tesi/lib/python312.zip',
    '/homes/pcarboni/.conda/envs/tesi/lib/python3.12',
    '/homes/pcarboni/.conda/envs/tesi/lib/python3.12/lib-dynload',
    '/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages',
    '/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/MultiScaleDeformableAttention-1.0-py3.12-linux-x86_64.egg',
]
USER_BASE: '/homes/pcarboni/.local' (exists)
USER_SITE: '/homes/pcarboni/.local/lib/python3.12/site-packages' (doesn't exist)
ENABLE_USER_SITE: True
running build
running build_py
running build_ext
building 'MultiScaleDeformableAttention' extension
[1/1] c++ -MMD -MF /work/tesi_pcarboni/cl_detr/models/ops/build/temp.linux-x86_64-cpython-312/work/tesi_pcarboni/cl_detr/models/ops/src/vision.o.d -pthread -B /homes/pcarboni/.conda/envs/tesi/compiler_compat -fno-strict-overflow -Wsign-compare -DNDEBUG -O2 -Wall -fPIC -O2 -isystem /homes/pcarboni/.conda/envs/tesi/include -fPIC -O2 -isystem /homes/pcarboni/.conda/envs/tesi/include -fPIC -DWITH_CUDA -I/work/tesi_pcarboni/cl_detr/models/ops/src -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include/torch/csrc/api/include -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include/TH -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include/THC -I/usr/local/cuda-12.1/include -I/homes/pcarboni/.conda/envs/tesi/include/python3.12 -c -c /work/tesi_pcarboni/cl_detr/models/ops/src/vision.cpp -o /work/tesi_pcarboni/cl_detr/models/ops/build/temp.linux-x86_64-cpython-312/work/tesi_pcarboni/cl_detr/models/ops/src/vision.o -DTORCH_API_INCLUDE_EXTENSION_H '-DPYBIND11_COMPILER_TYPE="_gcc"' '-DPYBIND11_STDLIB="_libstdcpp"' '-DPYBIND11_BUILD_ABI="_cxxabi1011"' -DTORCH_EXTENSION_NAME=MultiScaleDeformableAttention -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++17
FAILED: /work/tesi_pcarboni/cl_detr/models/ops/build/temp.linux-x86_64-cpython-312/work/tesi_pcarboni/cl_detr/models/ops/src/vision.o 
c++ -MMD -MF /work/tesi_pcarboni/cl_detr/models/ops/build/temp.linux-x86_64-cpython-312/work/tesi_pcarboni/cl_detr/models/ops/src/vision.o.d -pthread -B /homes/pcarboni/.conda/envs/tesi/compiler_compat -fno-strict-overflow -Wsign-compare -DNDEBUG -O2 -Wall -fPIC -O2 -isystem /homes/pcarboni/.conda/envs/tesi/include -fPIC -O2 -isystem /homes/pcarboni/.conda/envs/tesi/include -fPIC -DWITH_CUDA -I/work/tesi_pcarboni/cl_detr/models/ops/src -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include/torch/csrc/api/include -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include/TH -I/homes/pcarboni/.conda/envs/tesi/lib/python3.12/site-packages/torch/include/THC -I/usr/local/cuda-12.1/include -I/homes/pcarboni/.conda/envs/tesi/include/python3.12 -c -c /work/tesi_pcarboni/cl_detr/models/ops/src/vision.cpp -o /work/tesi_pcarboni/cl_detr/models/ops/build/temp.linux-x86_64-cpython-312/work/tesi_pcarboni/cl_detr/models/ops/src/vision.o -DTORCH_API_INCLUDE_EXTENSION_H '-DPYBIND11_COMPILER_TYPE="_gcc"' '-DPYBIND11_STDLIB="_libstdcpp"' '-DPYBIND11_BUILD_ABI="_cxxabi1011"' -DTORCH_EXTENSION_NAME=MultiScaleDeformableAttention -D_GLIBCXX_USE_CXX11_ABI=0 -std=c++17
In file included from /work/tesi_pcarboni/cl_detr/models/ops/src/vision.cpp:11:
/work/tesi_pcarboni/cl_detr/models/ops/src/ms_deform_attn.h: In function ‘at::Tensor ms_deform_attn_forward(const at::Tensor&, const at::Tensor&, const at::Tensor&, const at::Tensor&, const at::Tensor&, int)’:
/work/tesi_pcarboni/cl_detr/models/ops/src/ms_deform_attn.h:29:22: error: cannot convert ‘at::TensorBase::is_cuda’ from type ‘bool (at::TensorBase::)() const’ to type ‘bool’
   29 |     if (value.is_cuda)
      |                      ^
/work/tesi_pcarboni/cl_detr/models/ops/src/ms_deform_attn.h: In function ‘std::vector<at::Tensor> ms_deform_attn_backward(const at::Tensor&, const at::Tensor&, const at::Tensor&, const at::Tensor&, const at::Tensor&, const at::Tensor&, int)’:
/work/tesi_pcarboni/cl_detr/models/ops/src/ms_deform_attn.h:51:22: error: cannot convert ‘at::TensorBase::is_cuda’ from type ‘bool (at::TensorBase::)() const’ to type ‘bool’
   51 |     if (value.is_cuda)
      |                      ^
ninja: build stopped: subcommand failed.
